1.changed title for I_CREATE in lang/en.php 2.changed disabled fields opacity from 0.3 to 0.5 3.added {multiSelect: true} to controller/disabledFields.js 4.fixed formItem$PeriodStart visibility toggling in controller/config.js 5.added jump for formItem$FieldId in controller/grid.js 6.added ability to colorize numeric columns cell values for columns having {colors: true} 7.added fix for Ext.grid.plugin.Editing 8.added fix for *_Row->compiled(), for it to return empty string instead of null 9.added gridColumnXTextarea_Editor in action/Grid.js

--- a/css/admin/indi.combo.css
+++ b/css/admin/indi.combo.css
@@ -100,11 +100,7 @@
 .x-item-disabled .i-combo .i-combo-multiple .i-combo-selected-item .i-combo-selected-item-delete {
     cursor: default;
 }
-.x-item-disabled .x-form-text {
-    filter: alpha(opacity=30);
-    opacity: .3;
-}
 .x-toolbar .x-item-disabled .i-combo .x-form-text {
-    filter: alpha(opacity=30);
-    opacity: .3;
+    filter: alpha(opacity=50);
+    opacity: .5;
 }
